--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "0.18.0",
     "firebase": "6.0.2",
-    "node-sass": "4.12.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.0.3",
